# rascl

./: CMakeLists.txt  README.md  main.cc
include/rascl/: BasicImage.hh  Coordinate.hh  Image.hh  InteriorRasterizer.hh  Painter.hh  Pixel.hh  Point.hh  Rasterizer.hh  Style.hh  Triangle.hh
include/rascl/detail/: fill_interior.hh  focus_planes.hh  test_corners.hh
include/test/: InteriorKernelTest.hh
src/rascl/: BasicImage.cc  Image.cc  InteriorRasterizer.cc  boost_compute_alias.cc
src/rascl/detail/: focus_planes.cc  test_corners.cc
src/test/: InteriorKernelTest.cc
